# Read

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
install/: create-repo.bat  update-installer.bat
install/config/: config.xml  resources.qrc
