# check cmake requirements
cmake_minimum_required(VERSION 3.0)

PROJECT(READ)
message(STATUS "NOMACS_INCLUDE_DIRECTORY: ${NOMACS_INCLUDE_DIRECTORY}")
add_subdirectory(nomacs/ImageLounge)
message(STATUS "NOMACS_INCLUDE_DIRECTORY: ${NOMACS_INCLUDE_DIRECTORY}")
add_subdirectory(ReadFramework)
message(STATUS "NOMACS_INCLUDE_DIRECTORY: ${NOMACS_INCLUDE_DIRECTORY}")
set(NOMACS_VARS_ALREADY_SET true)
message(STATUS "NOMACS_INCLUDE_DIRECTORY: ${NOMACS_INCLUDE_DIRECTORY}")
set(RDF_VARS_ALREADY_SET true)
message(STATUS "NOMACS_INCLUDE_DIRECTORY: ${NOMACS_INCLUDE_DIRECTORY}")
add_subdirectory(ReadModules)